@@ -20,21 +20,6 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
 }
 
-//targetCompatibility = 11
-
-tasks.compileTestKotlin {
-    kotlinOptions {
-//        jvmTarget = 11
-    }
-}
-
-kotlin {
-//    jvmToolchain {
-//        languageVersion.set(JavaLanguageVersion.of(11))
-//    }
-//    kotlinDaemonJvmArgs = ['--add-opens=java.base/java.lang=ALL-UNNAMED', '--add-opens=java.base/java.io=ALL-UNNAMED']
-}
-
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
     kotlinOptions {
         jvmTarget = 11
